<resources>
    <string name="app_name">EasyWeather</string>
    <string name="current_location">Current location</string>
    <string name="search_city">Search</string>
    <string name="search_city_query_hint">Search</string>
    <string name="add_new_item">Add</string>
    <string name="settings">Settings</string>
    <string name="save_city">Save</string>
    <string name="delete_city">Delete</string>
    <string name="delete">DELETE</string>
    <string name="snackbar_delete_text">Item was removed from the list</string>
    <string name="snackbar_undo_text">UNDO</string>
    <string name="remove_dialog_title">Delete</string>
    <string name="remove_dialog_message">Are you sure you want to delete this item?</string>
    <string name="google_play_services_not_found">Google Play services keeps stopping</string>
    <string name="permission_text_1">Please allow this application to access this device\'s location</string>
    <string name="permission_text_2">The app will only have access to the location while you\'re using the app</string>
    <string name="settings_button">Settings</string>
    <string name="location_enabling_text_1">Location disabled</string>
    <string name="location_enabling_text_2">Please turn on location</string>
    <string name="location_enabling_button">Settings</string>
    <string name="connection_error_text">Network request failed</string>
    <string name="retry_button">Retry</string>
    <string name="waiting_for_data">Waiting for data…</string>
    <string name="temp_c_label">%1$.0f°C</string>
    <string name="temp_f_label">%1$.0f°F</string>
    <string name="temp_k_label">%1$.0fK</string>
    <string name="feels_like_temp_c_label">Feels like %1$.0f°C</string>
    <string name="feels_like_temp_f_label">Feels like %1$.0f°F</string>
    <string name="feels_like_temp_k_label">Feels like %1$.0fK</string>
    <string name="wind_label_text">Wind</string>
    <string name="wind_m_s_label">%1$.1f m/s %2$s</string>
    <string name="wind_mph_label">%1$.1f mph %2$s</string>
    <string name="pop_label_text">Probability of precipitation</string>
    <string name="pop_label">%1$d%%</string>
    <string name="uvi_label_text">UV index</string>
    <string name="uvi_label">%1$.1f</string>
    <string name="visibility_label_text">Visibility</string>
    <string name="visibility_km_label">%1$.1f km</string>
    <string name="visibility_mi_label">%1$.1f mi</string>
    <string name="humidity_label_text">Humidity</string>
    <string name="humidity_label">%1$d%%</string>
    <string name="pressure_label_text">Pressure</string>
    <string name="pressure_label">%1$d hPa</string>
    <string name="dew_point_label_text">Dew point</string>
    <string name="sunrise_label_text">Sunrise</string>
    <string name="sunrise_label">%1$s</string>
    <string name="sunset_label_text">Sunset</string>
    <string name="sunset_label">%1$s</string>
    <string name="now_label">Now</string>
    <string name="temp_and_feels_like_c_label">%1$.0f° (%2$.0f°)</string>
    <string name="temp_and_feels_like_f_label">%1$.0f° (%2$.0f°)</string>
    <string name="temp_and_feels_like_k_label">%1$.0f (%2$.0f)</string>
    <string name="temp_max_min_c_label">%1$.0f°C | %2$.0f°C</string>
    <string name="temp_max_min_f_label">%1$.0f°F | %2$.0f°F</string>
    <string name="temp_max_min_k_label">%1$.0fK | %2$.0fK</string>
    <string name="night_temp_label">Night</string>
    <string name="morning_temp_label">Morning</string>
    <string name="day_temp_label">Day</string>
    <string name="evening_temp_label">Evening</string>
    <string name="settings_title">Settings</string>
    <string name="theme_label">Theme</string>
    <string name="auto_label">A</string>
    <string name="units_label">Units</string>
    <string name="celsius_label">°C</string>
    <string name="fahrenheit_label">°F</string>
    <string name="kelvin">K</string>
    <string name="openweather_api">OpenWeather API</string>
    <string-array name="wind_directions">
        <item>↓ N</item>
        <item>↙ NE</item>
        <item>← E</item>
        <item>↖ SE</item>
        <item>↑ S</item>
        <item>↗ SW</item>
        <item>→ W</item>
        <item>↘ NW</item>
    </string-array>
    <string-array name="wind_direction_arrows">
        <item>↓</item>
        <item>↙</item>
        <item>←</item>
        <item>↖</item>
        <item>↑</item>
        <item>↗</item>
        <item>→</item>
        <item>↘</item>
    </string-array>
</resources>